--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,9 +1,11 @@
 .status-bar {
+  top: 0;
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: center;
   padding: 5px 3px;
 }
-
 .status-bar__column {
   width: 33%;
 }
